2007-10-24  Joe English  <jenglish@users.sourceforge.net>

	* generic/ttk/*.c, win/{ttkWinMonitor,ttkWinTheme,ttkWinXPTheme}.c,
	macosx/ttkMacOSXTheme.c: Move widget layout registration 
	from TtkElements_Init() to widget *_Init() routines.
	Renaming/consistency: s/...ElementGeometry()/...ElementSize()/

2007-10-24  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* doc/*.n, doc/*.3, doc/*.1: Lots of changes to take advantage of the
	new macros.

2007-10-24  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* win/tkWinDraw.c: Applied patch #1723362 for transparent bitmaps

	* generic/tkWindow.c: permit wm manage of any widget (esp: ttk::frame)

2007-10-23  Jeff Hobbs  <jeffh@ActiveState.com>

	* library/ttk/combobox.tcl (ttk::combobox::PopdownWindow): redo wm
	transient on each drop to handle reparent-able frames. [Bug 1818441]

2007-10-23  Joe English  <jenglish@users.sourceforge.net>

	* library/ttk/combobox.tcl: [namespace import ::ttk::scrollbar]
	doesn't work, since ttk::scrollbar isn't [namespace export]ed.

2007-10-23  Don Porter  <dgp@users.sourceforge.net>

	* tests/cursor.test:	Make tests robust against changes in Tcl's
	rules for accepting integers in octal format.

2007-10-23  Donal K. Fellows  <donal.k.fellows@manchester.ac.uk>

	* doc/font.n: Added section on the TIP#145 fonts.

2007-10-23  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* win/tkWinFont.c: Fixed leak in CreateNamedFont spotted by das.

2007-10-23  Daniel Steffen  <das@users.sourceforge.net>

	* library/demos/combo.tcl:	Aqua GOOBE.
	* library/demos/toolbar.tcl:
	* library/demos/tree.tcl:
	* library/demos/ttknote.tcl:
	* library/demos/ttkprogress.tcl:
	* library/demos/widget:

	* macosx/Wish.xcodeproj/project.pbxproj: add new demo files.
	* macosx/Wish.xcode/project.pbxproj:

2007-10-22  Donal K. Fellows  <donal.k.fellows@manchester.ac.uk>

	* library/demos/widget: Added more demos, reorganized to make Tk and
	Ttk demos seem to be more coherent whole. Made localization a bit